--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   db:
     image: postgres
+    container_name: tgb_db
     restart: always
     ports:
       - "5432:5432"
@@ -13,6 +14,7 @@ services:
       - postgres-data:/var/lib/postgresql/data
   app:
     build: .
+    container_name: tgb_app
     restart: always
     depends_on:
       - db
