TGB_railway_deploy - without docker db

--- a/example.env
+++ b/example.env
@@ -4,6 +4,14 @@ TOKEN=telegram_bot_token
 ADMIN_ID=123456
 # ID Основной группы Ф30
 CLOSED_GROUP_ID=-123456
+# Никнейм администратора канала (@admin)
+ADMIN_USERNAME=-123456
+# ID Группы с заявками (Bmw Club Invites)
+INVITES_GROUP_ID=-123456
+# ID Группы с уведомлениями (Bmw Club Notification)
+NOTIFICATION_GROUP_ID=-123456
+# Debug Telegram Bot API
+TG_DEBUG=1
 
 # Docker configs
 POSTGRES_HOST=db
