TGBR_1 - fix env

--- a/example.env
+++ b/example.env
@@ -2,10 +2,10 @@
 TOKEN=telegram_bot_token
 # ID Администратора который рассматривает заявки (490978201 - Мой, 6225178130 - Ф30 Админ)
 ADMIN_ID=123456
+# Никнейм администратора канала (@admin)
+ADMIN_USERNAME=@fclubkyivadmin
 # ID Основной группы Ф30
 CLOSED_GROUP_ID=-123456
-# Никнейм администратора канала (@admin)
-ADMIN_USERNAME=-123456
 # ID Группы с заявками (Bmw Club Invites)
 INVITES_GROUP_ID=-123456
 # ID Группы с уведомлениями (Bmw Club Notification)
